# trading-assistant

./: .dockerignore  .env.example  .gitignore  .npmignore  404.html  ACCURACY_TRACKING.md  BUILD_SUCCESS_v2.0.0.md  CHANGELOG.md  CLAWHUB_READY.md  CLAWHUB_SUBMISSION.md  CLAWHUB_SUBMISSION_FINAL.md  CLAWHUB_UPLOAD_INSTRUCTIONS.md  CLAWHUB_UPLOAD_READY.md  COST_FIX_EXPLANATION.md  DOCKERHUB_README.md  Dockerfile  FINAL_BUILD_NOTES.md  GITHUB_ACTIONS_MULTI_BUILD.md  GITHUB_ACTIONS_SETUP.md  GITHUB_RELEASE_INSTRUCTIONS.md  LICENSE  MANIFEST.in  NPM_PUBLISH_STATUS.md  NPM_TOKEN_GUIDE.md  OPTIMIZATION_REPORT.md  PREDICTION_OPTIMIZATION.md  PROJECT_PLAN.md  PUBLISH_GUIDE.md  PUSH_COMPLETE.md  README.md  README_CLAWHUB.md  README_en.md  README_zh.md  REBUILD_NOTES.md  RE_PUSH_COMPLETE.md  SCHEDULE.md  SECURITY_FIXES.md  SECURITY_FIXES_v2.0.0.md  SECURITY_FIX_SUMMARY.md  SETUP_COMPLETE.md  (+24 more)
.github/: GITHUB_CONFIG.md
.github/workflows/: deploy-docs.yml  publish.yml  (+11 more)
CLI/: index.html
CONFIGURATION/: index.html
DOCKER/: index.html
FAQ/: index.html
I18N/: index.html
INTEGRATION_PLAN/: index.html
PUBLISHING/: index.html
PYPI_TOKEN_GUIDE/: index.html
V1.2.0_RELEASE_SUCCESS/: index.html
daily_reports/: Day1-2_2026-03-24.md  Day1_2026-03-24.md
docs/: CLI.md  CLI.zh.md  CONFIGURATION.md  DOCKER.md  FAQ.md  FAQ.zh.md  I18N.md  INTEGRATION_PLAN.md  PUBLISHING.md  PYPI_TOKEN_GUIDE.md  V1.2.0_RELEASE_SUCCESS.md  index.md  index.zh.md
js/: fix-links.js  lang-switch.js
reports/: 2026-03-27_evening_large.md  2026-03-27_evening_medium.md
scripts/: release.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
stylesheets/: extra.css
tests/: test_integration.py  test_position_calculator.py  test_support_resistance.py  test_trading_signals.py
zh/: index.html
(+160 files in other folders)
