[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-trading-assistant"
version = "1.0.0"
authors = [
    {name = "OpenClaw Community", email = "community@openclaw.ai"}
]
description = "OpenClaw Trading Assistant - Technical Analysis & Trading Signals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["trading", "finance", "technical-analysis", "stocks", "openclaw"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/XuXuClassMate/trading-assistant"
Documentation = "https://github.com/XuXuClassMate/trading-assistant#readme"
Repository = "https://github.com/XuXuClassMate/trading-assistant.git"
Issues = "https://github.com/XuXuClassMate/trading-assistant/issues"
Changelog = "https://github.com/XuXuClassMate/trading-assistant/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
exclude = ["tests*", "demo*", "test*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]
